src/index.css
:root {
  color-scheme: light dark;
  --system-font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
  --monospace-font:
    ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono", "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace",
    "Source Code Pro", "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
  --input-padding-block: 4px;
  --input-padding-inline: 8px;
  --input-border-radius: 2px;
  --input-border-width: 1px;
  --text-line-height: 1.5;
  --code-line-height: 1.2;
  --button-border-radius: 2px;

  --body-background: #e1e1e1;
  --input-background: transparent;
  --input-active-background: #ffffff;
  --readonly-text-background: #fafafa;
  --inline-code-background: #dedede;
  --ghost-button-hover-background: #eeeeee;
  --table-border-color: #cccccc;
  --table-hover-color: #eeeeee;
  --action-button-rest-color: #222;
  --action-button-hover-color: #000;
  --button-background-rest-color: #f1f1f1;
  --button-background-hover-color: #dfdfdf;
  --button-border-rest-color: #cccccc;
  --button-border-hover-color: #000;

  --action-bar-z-index: 1;
  --app-header-z-index: 2;
  --artifact-editor-z-index: 2;
  --toast-z-index: 1000;
}

@media (prefers-color-scheme: dark) {
  :root {
    --body-background: #242424;
    --input-background: transparent;
    --input-active-background: #1a1a1a;
    --readonly-text-background: #333333;
    --inline-code-background: #1e1e1e;
    --ghost-button-hover-background: #2a2a2a;
    --table-border-color: #555555;
    --table-hover-color: #444444;
    --action-button-rest-color: #8b8b8b;
    --action-button-hover-color: #fff;
    --button-background-rest-color: #242424;
    --button-background-hover-color: #444;
    --button-border-rest-color: #555555;
    --button-border-hover-color: #fff;
  }
}

html,
body {
  min-height: 100%;
}

body {
  background-color: var(--body-background);
  font-family: var(--system-font);
  overflow-y: scroll;

  /* when doc has dialog open, disable overflow on body */
  &:has(dialog[open]) {
    overflow: hidden;
  }
}

dialog {
  padding: 1rem;
  margin: auto;
  width: calc(100% - 2rem);
  max-width: 60rem;

  &.fullscreen {
    border: none;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    width: 100%;
    height: 100%;
    max-width: 100%;
    max-height: 100%;
    padding: 0;
  }
}

input:where([type="text"], [type="password"]) {
  padding: var(--input-padding-block) var(--input-padding-inline);
}

*,
::before,
::after {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  margin: 0;
}

*:where(input, select, textarea):focus {
  background-color: var(--input-active-background);
}

[hidden] {
  display: none !important;
}

.js-focusable:focus {
  outline: 2px solid currentColor;
  outline-offset: -2px;
}

